test/Fail/CoinductiveUnitRecord.err
CoinductiveUnitRecord.agda:19.1-20.16: error: [TerminationIssue]
Termination checking failed for the following function:
  bad
Problematic call:
  bad
    (at CoinductiveUnitRecord.agda:20.13-16)

CoinductiveUnitRecord.agda:23.1-24.18: error: [TerminationIssue]
Termination checking failed for the following function:
  bad'
Problematic call:
  bad'
    (at CoinductiveUnitRecord.agda:24.14-18)

CoinductiveUnitRecord.agda:28.8-12: error: [UnequalTerms]
The terms
  bad
and
  bad'
are not equal at type Unit
when checking that the expression refl has type bad ≡ bad'
